# ai-accelerators-course-2025

./: .gitignore  main.cpp
.github/: deadline.py
.github/workflows/: main.yml
tasks/01-softmax-cpu/Kozhevatov/: main.cpp
tasks/01-softmax-cpu/akulikov/: CMakeLists.txt  main.cpp
tasks/01-softmax-cpu/chuvashev/: main.cpp
tasks/01-softmax-cpu/example/: main.cpp
tasks/01-softmax-cpu/rshtuni/: CMakeLists.txt  main.cpp
tasks/01-softmax-cpu/sharapov/: main.cpp
tasks/02-softmax-cuda/Kozhevatov/: CMakeLists.txt  main.cu
tasks/02-softmax-cuda/chuvashev/: CMakeLists.txt  main.cu  script.bat  script.py
tasks/02-softmax-cuda/chuvashev/include/: utils.h
tasks/02-softmax-cuda/chuvashev/src/: main.cpp  utils.cpp
tasks/03-matmul-cuda/Kozhevatov/: CMakeLists.txt  main.cu
tasks/03-matmul-cuda/chuvashev/: CMakeLists.txt
tasks/03-matmul-cuda/chuvashev/include/: utils.h
tasks/03-matmul-cuda/chuvashev/src/: kernel.cu  main.cpp
tasks/03-matmul-cuda/chuvashev/src/kernels/: kernel_cutlass.cu  kernel_mmgv1.cu  kernel_mmgv2.cu  kernel_wmma.cu
tasks/03-matmul-cuda/nazarov/: CMakeLists.txt
tasks/03-matmul-cuda/rshtuni/: CMakeLists.txt
tasks/04-softmax-ascend/chuvashev/: CMakeLists.txt  ascendc_kernels_bbit  data_utils.h  main.cpp  run.sh  softmax_custom.cpp
tasks/04-softmax-ascend/chuvashev/scripts/: gen_data.py  verify_result.py
tasks/04-softmax-ascend/example/: run.sh
tasks/04-softmax-ascend/rshtuni/: const.h  main.cpp  softmax_custom.cpp
tasks/05-mixed-ascend/chuvashev/: CMakeLists.txt  custom_matmul.cpp  data_utils.h  main.cpp  matmul_custom.cpp  matmul_custom_tiling.cpp  run.sh  softmax_custom.cpp
tasks/05-mixed-ascend/chuvashev/scripts/: gen_data.py
tasks/05-mixed-ascend/rshtuni/: const.h  main.cpp  matmul_leakyrelu_custom.cpp  matmul_leakyrelu_custom_tiling.cpp  softmax_custom.cpp
